--- a/backend/package.json
+++ b/backend/package.json
@@ -5,14 +5,17 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node app.js",
+    "seed": "node ./utils/seed.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ngneat/falso": "^3.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "mockjs": "^1.1.0",
     "mongodb": "^3.6.2"
   }
 }
