--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "mockjs": "^1.1.0",
-    "mongodb": "^3.6.2"
+    "mongodb": "^3.6.2",
+    "xss": "^1.0.11"
   }
 }
