--- a/backend/package.json
+++ b/backend/package.json
@@ -18,5 +18,8 @@
     "mockjs": "^1.1.0",
     "mongodb": "^3.6.2",
     "xss": "^1.0.11"
+  },
+  "devDependencies": {
+    "webpack": "^5.72.0"
   }
 }
