--- a/backend/package.json
+++ b/backend/package.json
@@ -12,11 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "@ngneat/falso": "^3.1.0",
+    "bluebird": "^3.7.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "mockjs": "^1.1.0",
     "mongodb": "^3.6.2",
+    "redis": "^3.0.2",
     "xss": "^1.0.11"
   },
   "devDependencies": {
