--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@ngneat/falso": "^3.1.0",
+    "aws-sdk": "^2.1119.0",
     "bluebird": "^3.7.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
@@ -19,6 +20,7 @@
     "mockjs": "^1.1.0",
     "mongodb": "^3.6.2",
     "redis": "^3.0.2",
+    "uuid": "^8.3.2",
     "xss": "^1.0.11"
   },
   "devDependencies": {
